style.css
/* ... */
.font-t-Futura-500-15 {
    font-family: 'Futura', 'Jost', sans-serif;
    font-weight: 500;
    font-size: 15.00px;
    line-height: 21.90px;
    letter-spacing: -0.75px;
}

.font-t-Futura-500-18 {
    font-family: 'Futura', 'Jost', sans-serif;
    font-weight: 500;
    font-size: 18.11px;
    line-height: 25.35px;
    letter-spacing: 0.36px;
}

.font-t-Futura-500-20 {
    font-family: 'Futura', 'Jost', sans-serif;
    font-weight: 500;
    font-size: 20.83px;
    line-height: 30.41px;
    letter-spacing: 0.42px;
}

.font-t-Futura-500-22 {
    font-family: 'Futura', 'Jost', sans-serif;
    font-weight: 500;
    font-size: 22.64px;
    line-height: 33.05px;
    letter-spacing: -1.13px;
}

.font-t-Futura-500-28 {
    font-family: 'Futura', 'Jost', sans-serif;
    font-weight: 500;
    font-size: 28.98px;
    line-height: 42.30px;
    letter-spacing: 0.58px;
}

.font-t-Futura-500-32 {
    font-family: 'Futura', 'Jost', sans-serif;
    font-weight: 500;
    font-size: 32.00px;
    line-height: 46.72px;
    letter-spacing: 0.64px;
}

.font-t-Futura-500-33 {
    font-family: 'Futura', 'Jost', sans-serif;
    font-weight: 500;
    font-size: 33.50px;
    line-height: 46.90px;
    letter-spacing: 0.67px;
}

.font-t-Futura-500-40 {
    font-family: 'Futura', 'Jost', sans-serif;
    font-weight: 500;
    font-size: 40.75px;
    line-height: 57.04px;
    letter-spacing: 0.81px;
}

.font-t-Futura-800-21 {
    font-family: 'Futura', 'Jost', sans-serif;
    font-weight: 800;
    font-size: 21.73px;
    line-height: 41.07px;
    letter-spacing: -1.09px;
}

.font-t-Futura-800-80 {
    font-family: 'Futura', 'Jost', sans-serif;
    font-weight: 800;
    font-size: 80.59px;
    line-height: 117.66px;
    letter-spacing: 1.61px;
}

#history-hero-block { height: 900px; }
#history-intro-block { height: 130px; }
#history-bridge-block { height: 340px; }
#history-2000s-block { height: 1260px; }
#history-2010s-block { height: 820px; }
#history-2020s-block { height: 836px; }
#behaviors-hero-block { height: 992px; }
#behavior-01-block { height: 764px; }
#behavior-02-block { height: 779px; }
#behavior-03-block { height: 757px; }
#behavior-04-block { height: 1107px; }
#el-5-8 {
    position: absolute;
    left: 101.9px;
    top: 575.9px;
    width: 212.8px;
    height: 151.2px;
    opacity: 0.990;
}

#el-5-11 {
    position: absolute;
    left: 808.2px;
    top: 87.0px;
    width: 393.4px;
    height: 293.1px;
}

#el-5-19 {
    position: absolute;
    left: 101.9px;
    top: 144.9px;
    width: 572.3px;
    height: 398.4px;
}

#el-5-20 {
    position: absolute;
    left: 452.3px;
    top: 231.0px;
    width: 462.7px;
    height: 645.6px;
}

#el-5-25 {
    opacity: 0.990;
    color: rgb(0, 0, 0);
    text-align: center;
    width: 100%;
}

#el-5-26 {
}

#el-5-24 {
    position: absolute;
    left: 1063.5px;
    top: 524.3px;
    width: 234.5px;
    height: 234.5px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 9px;
    padding: 25px;
    text-align: center;
    background-color: rgb(43, 255, 180);
    border-radius: 50%;
}

#el-5-27 {
    position: absolute;
    left: 101.9px;
    top: 8.8px;
    width: 559.0px;
    height: 114.0px;
    color: rgb(0, 0, 0);
}

#el-5-28 {
    position: absolute;
    left: -234.0px;
    top: 87.0px;
    width: 473.4px;
    height: 293.5px;
}

#el-5-29 {
    position: absolute;
    left: 298.4px;
    top: 87.0px;
    width: 451.3px;
    height: 293.1px;
}

#el-5-36 {
    position: absolute;
    left: -111.8px;
    top: 23.6px;
    width: 229.1px;
    height: 42.0px;
    opacity: 0.990;
    color: rgb(0, 0, 0);
    text-align: center;
}

#el-5-37 {
    position: absolute;
    left: 408.9px;
    top: 23.6px;
    width: 229.1px;
    height: 42.0px;
    opacity: 0.990;
    color: rgb(0, 0, 0);
    text-align: center;
}

#el-5-38 {
    position: absolute;
    left: 889.7px;
    top: 23.6px;
    width: 229.1px;
    height: 42.0px;
    opacity: 0.990;
    color: rgb(0, 0, 0);
    text-align: center;
}

#el-5-39 {
    position: absolute;
    left: 65.7px;
    top: 448.7px;
    width: 294.3px;
    height: 147.6px;
    opacity: 0.990;
}

#el-5-40 {
    position: absolute;
    left: -181.5px;
    top: 432.0px;
    width: 421.0px;
    height: 112.0px;
    opacity: 0.990;
    color: rgb(0, 0, 0);
}

#el-5-41 {
    position: absolute;
    left: 298.4px;
    top: 432.0px;
    width: 450.9px;
    height: 138.0px;
    opacity: 0.990;
    color: rgb(0, 0, 0);
}

#el-5-42 {
    position: absolute;
    left: 808.2px;
    top: 432.0px;
    width: 393.0px;
    height: 112.0px;
    opacity: 0.990;
    color: rgb(0, 0, 0);
}

#el-5-43 {
    position: absolute;
    left: 1260.0px;
    top: 432.0px;
    width: 393.0px;
    height: 112.0px;
    opacity: 0.990;
    color: rgb(0, 0, 0);
}

#el-5-44 {
    position: absolute;
    left: 63.0px;
    top: 617.2px;
    width: 253.0px;
    height: 228.0px;
    opacity: 0.990;
    color: rgb(0, 0, 0);
}

#el-5-45 {
    position: absolute;
    left: 63.0px;
    top: 172.4px;
    width: 253.0px;
    height: 228.0px;
    opacity: 0.990;
    color: rgb(0, 0, 0);
}

#el-5-46 {
    position: absolute;
    left: 995.6px;
    top: 174.8px;
    width: 286.0px;
    height: 114.0px;
    opacity: 0.990;
    color: rgb(0, 0, 0);
}

#el-5-47 {
    position: absolute;
    left: 382.0px;
    top: 61.6px;
    width: 657.0px;
    height: 236.0px;
    opacity: 0.990;
    color: rgb(0, 0, 0);
    text-align: center;
}

#el-5-48 {
    position: absolute;
    left: 315.0px;
    top: 32.7px;
    width: 52.0px;
    height: 118.0px;
    opacity: 0.990;
    color: rgb(37, 224, 158);
    text-align: center;
}

#el-5-49 {
    position: absolute;
    left: 1053.0px;
    top: 32.7px;
    width: 52.0px;
    height: 118.0px;
    opacity: 0.990;
    color: rgb(37, 224, 158);
    text-align: center;
}
/* ... */

